--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel ./src/index.html",
+    "build": "gatsby build --prefix-paths",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
